--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -103,3 +103,9 @@ h2 {
   margin-right: 8px;
   opacity: 0.7;
 }
+
+button {
+    padding: 0px 10px 0px 10px;
+    border-color: aquamarine;
+    color: dodgerblue;
+}
